tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/PHP73ErrorReportingTests#PHP73ErrorReportingTests(String[]).mjava
	public PHP73ErrorReportingTests(String[] fileNames) {
		super(fileNames);
	}

